###### TWE 3.2-1 RELEASED ######
2010-07-29 Sasa Bojanic <sasaboy@together.at>
   # twe-includes.txt file replace with twe-includes.xlsx

2010-06-28 Sasa Bojanic <sasaboy@together.at>
   # NSI file for setup improved to detect 64bit JAVA

2010-06-28 Sasa Bojanic <sasaboy@together.at>
   # updated license files

2010-06-04 Sasa Bojanic <sasaboy@together.at>
   # jgraph updated to version 5.13.0.4. Code updated accordingly.

2010-06-03 Sasa Bojanic <sasaboy@together.at>
   # jEdit-syntax.jar updated to version 2.2.2. Code updated accordingly. Enabled copying from XPDLView component.
   # JavaHelp library updated to version 2.0_05
   # fop libraries updated to version 0.95 (new JAR files added, one JAR renamed, twe.xml updated so PDF generation works properly)
   # saxon library updated to version 6.5.5
   # xerces library updated to version 2.9.1
   # build procedure changed to leave-out itext.jar when making customer specific distribution
   # updated iText.jar library to version 5.02 (code updated accordingly to iText changes, added new AGPL license for iText to the sources)
   # updated antcontrib.jar library to version 1.0beta3
   # updated ant*.jar libraries to version 1.8.1, removed ant-trax.jar
   # updated batik*.jar libraries to version 1.7, added two additional jars (batik-codec.jar and batik-ext.jar)
   # twe.xml docu updated (no OW2)
   
2010-05-27 Sasa Bojanic <sasaboy@together.at>
   # refactorization of modules (no commercial modules anymore)
   # changes to build procedure
   # changes to splash-screen (no OW2 logo)
   
2010-05-23 Sasa Bojanic <sasaboy@together.at>
   # License-TOG.txt needs to be in SVN
   # build.xml - clean procedure improved

2010-05-11 Sasa Bojanic <sasaboy@together.at>
	# TWS updated to version 3.1-3
	# new target for making dependencies output for TWS
	# SVN IGNORE defined

###### TWE 3.1-2 RELEASED ######

2010-03-25 Aleksandar Stojsavljevic <aleksandar.stojsavljevic@prozone.rs>