@@ -1,3 +1,6 @@
+2010-08-27 Sasa Bojanic <sasaboy@together.at>
+   # Fix in Utils.java class - path with empty space problem and findPropertyFiles() method usage in eclipse
+   
 ###### TWE 3.2-1 RELEASED ######
 2010-07-29 Sasa Bojanic <sasaboy@together.at>
    # twe-includes.txt file replace with twe-includes.xlsx
